RESOLVED FIXED 257830
REGRESSION (264086@main): [iOS 17] Autocorrect highlight is sometimes incorrect in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=257830
Summary REGRESSION (264086@main): [iOS 17] Autocorrect highlight is sometimes incorre...
Wenson Hsieh
Reported 2023-06-07 13:55:30 PDT
Attachments
Wenson Hsieh
Comment 1 2023-06-07 14:43:07 PDT
EWS
Comment 2 2023-06-07 17:39:19 PDT
Committed 264969@main (ce1f5b1c5dd7): <https://commits.webkit.org/264969@main> Reviewed commits have been landed. Closing PR #14763 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.