Tools/TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm
@@ -36,6 +36,12 @@
 #import <wtf/RetainPtr.h>
 #import <wtf/Vector.h>
 
+static constexpr auto longTextString = "Here's to the crazy ones. The misfits. The rebels. The troublemakers. The round pegs in the square holes. "
+    "The ones who see things differently. They're not fond of rules. And they have no respect for the status quo. "
+    "You can quote them, disagree with them, glorify or vilify them. About the only thing you can't do is ignore them. "
+    "Because they change things. They push the human race forward. And while some may see them as the crazy ones, we see genius. "
+    "Because the people who are crazy enough to think they can change the world, are the ones who do.";
+
 #define EXPECT_NSSTRING_EQ(expected, actual) \
     EXPECT_TRUE([actual isKindOfClass:[NSString class]]); \
     EXPECT_WK_STREQ(expected, (NSString *)actual);
@@ -1514,6 +1520,25 @@ TEST(DocumentEditingContext, CharacterRectConsistencyWithRTLAndVerticalText)
     [webView stringByEvaluatingJavaScript:@"document.body.style = 'writing-mode: vertical-rl; direction: rtl;'"];
 
     checkThatAllCharacterRectsAreConsistentWithSelectionRects(webView.get());
+}
+
+TEST(DocumentEditingContext, CharacterRectsInEditableWebView)
+{
+    auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 320, 568)]);
+    [webView _setEditable:YES];
+    [webView synchronouslyLoadHTMLString:makeString("<meta name='viewport' content='width=device-width, initial-scale=1'><body>"_s, longTextString, "</body>"_s)];
+    [webView objectByEvaluatingJavaScript:@"getSelection().setPosition(document.body, 0)"];
+    [webView waitForNextPresentationUpdate];
+
+    RetainPtr context = [webView synchronouslyRequestDocumentContext:makeRequest(UIWKDocumentRequestText | UIWKDocumentRequestRects, UITextGranularitySentence, 15)];
+    auto contextAfter = dynamic_objc_cast<NSString>([context contextAfter]);
+    EXPECT_GT(contextAfter.length, 0U);
+
+    for (auto range : contextAfter.composedCharacterRanges) {
+        auto rectFromContext = [context boundingRectForCharacterRange:range];
+        auto text = [contextAfter substringWithRange:range];
+        EXPECT_TRUE([text isEqualToString:@" "] || !CGRectIsEmpty(rectFromContext));
+    }
 }
 
 #endif // PLATFORM(IOS_FAMILY) && HAVE(UI_WK_DOCUMENT_CONTEXT)
